Fix[Tests]: fixed all broken tests
